--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 body,
 p,
 h1,
-h2 {
+ h2{
     margin: 0;
    font-family: 'Roboto', sans-serif;
 }
@@ -74,7 +74,7 @@ a, button{
     background-size: cover;
 }
 .news{
-    text-align:center;
+    text-align: center;
     padding: 32px;
     background-color: #fff;
     margin: -24px 32px 0px 32px ;
@@ -82,8 +82,7 @@ a, button{
 .news h2{
     text-align: center;
     font-weight: 300;
-    border-bottom: 2px solid rgb(196, 94, 12);
-    width: 150px;
+    text-decoration: underline solid yellow 2px;
     margin: 0;
     padding: 16px;
 }
