--- a/style.css
+++ b/style.css
@@ -83,6 +83,28 @@ a, button{
     text-align: center;
     font-weight: 300;
     text-decoration: underline solid yellow 2px;
-    margin: 0;
+    margin: 0 auto;
     padding: 16px;
+}
+
+.cards{
+    display: flex;
+    justify-content: space-between;
+
+}
+.card{
+    width: 48%;
+    margin: 16px;
+    border: 1px solid #3f3939;
+    border-radius: 5px;
+    padding-bottom: 16px;
+}
+.card .card-img{
+    width: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.card .card-text, .card a{
+    padding: 16px;
+
 }
