--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a, button{
     color: #000;
 }
 .hero{
-    height: 120vh;
+    height: 70vh;
     background-image: url(./city2.jpg);
     background-size: cover;
 }
@@ -82,9 +82,11 @@ a, button{
 .news h2{
     text-align: center;
     font-weight: 300;
-    text-decoration: underline solid yellow 2px;
+    border-bottom: solid red 2px;
+    width: 120px;
     margin: 0 auto;
-    padding: 16px;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
 }
 
 .cards{
@@ -107,4 +109,40 @@ a, button{
 .card .card-text, .card a{
     padding: 16px;
 
+}
+
+@media screen and (max-width:768px){
+    .black-header{
+        /* display: block; */
+        /* text-align: center; */
+        justify-content: center;
+    }
+    .black-header .info-side{
+        display: none;
+
+    }
+    .black-header a{
+        font-size: 15px;
+    }
+    .white-header{
+        flex-direction: column;
+    }
+    .white-header .customer-side{
+        margin-bottom: 16px;
+    }
+
+    .white-header button {
+        padding: 16px 24px;
+        font-size: 18px;
+    }
+    .hero{
+        height: 35vh;
+    }
+    .cards{
+        flex-direction: column;
+    }
+    .card{
+        width: 100%;
+        margin: 16px 0;
+    }
 }
