--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ a, button{
     border-radius: 5px;
     padding-bottom: 16px;
 }
-.card .card-img{
+.card .card-image img{
     width: 100%;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -131,21 +131,21 @@ footer{
 .nav-column ul li a{
     color: #616161;
 }
-
 .social {
-    display: flex;
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
     text-align: center;
-    text-decoration: none;
-    justify-content: center;
+    margin-top: 40px;
+    
   }
-  .fa:hover {
+  .social a {
+    font-size: 48px;
+    margin: 0 20px;
+    color: #616161;
+  }
+  .social:hover {
     opacity: 0.7;
   }
 
-  .fa-facebook {
+  /* .fa-facebook {
     background: #3B5998;
     color: white;
   }
@@ -153,7 +153,7 @@ footer{
   .fa-twitter {
     background: #55ACEE;
     color: white;
-  }
+  } */
 @media screen and (max-width:768px){
     .black-header{
         /* display: block; */
@@ -181,13 +181,11 @@ footer{
     .hero{
         height: 35vh;
     }
-    /* .cards{
-        flex-direction: row;
-    } */
-    .card{
+    .card {
         width: 100%;
         margin: 8px 0;
     }
+    
     .mini{
         width: 48%;
     }
